--- a/EntregaIntegradora/package.json
+++ b/EntregaIntegradora/package.json
@@ -1,7 +1,6 @@
 {
   "name": "entregaintegradora",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.0.4",
+    "mongoose": "^8.1.0",
+    "mongoose-paginate-v2": "^1.8.0",
     "socket.io": "^4.7.4"
-  }
+  },
+  "description": ""
 }
