--- a/EntregaIntegradora/package.json
+++ b/EntregaIntegradora/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
@@ -20,6 +21,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "socket.io": "^4.7.4"
   },
   "description": ""
