--- a/EntregaIntegradora/package.json
+++ b/EntregaIntegradora/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
