--- a/EntregaIntegradora/package.json
+++ b/EntregaIntegradora/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "dev": "node --watch src/app.js"
+    "dev": "node --watch src/app.js",
+    "test": "mocha --timeout 5000 test/supertest.test.js"
   },
   "keywords": [],
   "author": "",
@@ -31,5 +31,10 @@
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.4.0",
+    "supertest": "^6.3.4"
+  }
 }
