--- a/EntregaIntegradora/package.json
+++ b/EntregaIntegradora/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.7.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "sweetalert2": "^11.10.8",
     "winston": "^3.12.0"
   },
   "description": "",
